--- a/slurm.conf
+++ b/slurm.conf
@@ -92,3 +92,9 @@ NodeName=c[1-2] RealMemory=1000 State=UNKNOWN
 #
 # PARTITIONS
 PartitionName=normal Default=yes Nodes=c[1-2] Priority=50 DefMemPerCPU=500 Shared=NO MaxNodes=2 MaxTime=5-00:00:00 DefaultTime=5-00:00:00 State=UP
+#New
+AuthAltTypes=auth/jwt
+AuthAltParameters=jwt_key=/etc/slurm/jwt_hs256.key
+SlurmdParameters=config_overrides
+RestAuthFile=/etc/slurm/jwt_hs256.key
+
